fix form whitespacing for better UI

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ button {
   flex-direction: column;
   color: var(--light-color);
   background-color: var(--main-color-transparent);
-  padding: 2rem;
+  padding: 2rem 1rem;
   border-radius: 1rem;
 
   width: 90vw;
